Support single monitor default
also apply some shellcheck

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,6 +18,7 @@ exec_always {
     xrdb .Xresources
     # gtk2
     xsettingsd -c ~/.config/bspwm/xsettings.conf
+    ~/.local/bin/i3-autotiling
 }
 
 # autostart
