--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,8 +1,9 @@
 ; Global settings
 [redshift]
+fade=0
 temp-day=6500
 temp-night=4000
-transition=1
+;transition=1
 gamma=0.8:0.7:0.8
 location-provider=manual
 ;adjustment-method=randr
