fonts: Cantarell does no have numeric alignment

--- a/.config/i3/xsettings.conf
+++ b/.config/i3/xsettings.conf
@@ -5,5 +5,5 @@ Xft/RGBA "none"
 Xft/lcdfilter "none"
 Net/IconThemeName "Faba"
 Net/ThemeName "Dracula"
-Gtk/FontName "Cantarell 12"
+Gtk/FontName "Liberation Sans Narrow 13"
 Gtk/CursorThemeName "DMZ-Black"
