--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,34 +1,35 @@
+// vim: filetype=jsonc
 {
     "layer": "bottom", // Waybar at top layer
     "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
+    "output": "DP-1",
+    // "height": 30, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
+    "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
-    "modules-right": ["mpd", "idle_inhibitor", "network", "cpu", "memory", "temperature", "clock", "tray"],
+    "modules-right": ["custom/hamster", "mpd", "idle_inhibitor", "tray", "pulseaudio"],
     // Modules configuration
     "sway/workspaces": {
-         "disable-scroll": false,
-         "all-outputs": false,
-	 "current-only": false,
-	 "disable-scroll-wraparound": true,
-         "format": "{name}: {icon}",
-         "format-icons": {
-             "urgent": "",
-             "focused": "",
-             "default": ""
-         }
+        "disable-scroll": false,
+        "all-outputs": true,
+        "current-only": false,
+        "disable-scroll-wraparound": true,
+        "format": "{name} {icon} {index}",
+        "format-icons": {
+            "urgent": "",
+            "focused": "",
+            "default": ""
+        }
     },
-    //"sway/mode": {"format": "<span style=\"italic\">{}</span>" },
     "sway/mode": {
-		"format": " {}",
-		"max-length": 50
+        "format": " {}",
+        "max-length": 50
     },
     "sway/window" : {
-		"on-scroll-up": "swaymsg workspace prev",
-		"on-scroll-down": "swaymsg workspace next",
-		"tooltip": false
+        "on-scroll-up": "swaymsg workspace prev",
+        "on-scroll-down": "swaymsg workspace next",
+        "tooltip": false
     },
     "mpd": {
         "format": " {stateIcon} {artist} - {title} ",
@@ -66,10 +67,6 @@
     "tray": {
         // "icon-size": 21,
         "spacing": 10
-    },
-    "clock": {
-        "tooltip-format": "{:%Y-%m-%d | %H:%M}",
-        "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
         "format": "{usage}% ",
@@ -109,7 +106,6 @@
         "bat": "BAT2"
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
         "format-linked": "{ifname} (No IP) ",
@@ -135,16 +131,11 @@
         },
         "on-click": "pavucontrol"
     },
-    "custom/media": {
-        "format": "{icon} {}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+    "custom/hamster": {
+        "format": "{}",
+        "return-type": "",
+        "exec": "hamster current",
+        "on-click": "hamster overview",
+        "interval": "60"
     }
 }
