--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,28 +1,29 @@
-font=Iosevka Term:size=13:style=Regular
+font=Iosevka:size=11:style=Medium,Hack:size=11,monospace:size=11
 pad=16x16
 term=xterm-256color
 
 [colors]
-alpha=0.70
-
-# Dracula theme lifted from alacritty
-regular0=000000
+alpha=0.95
+foreground=f8f8f2
+background=282a2c
+# Dracula theme 
+regular0=44475a
 regular1=ff5555
 regular2=50fa7b
 regular3=f1fa8c
 regular4=bd93f9
 regular5=ff79c6
 regular6=8be9fd
-regular7=bfbfbf
+regular7=f8f8f2
 
-bright0=4d4d4d
+bright0=44475a
 bright1=ff6e67
 bright2=5af78e
 bright3=f4f99d
 bright4=caa9fa
 bright5=ff92d0
 bright6=9aedfe
-bright7=e6e6e6
+bright7=f8f8f2
 
 [mouse]
 hide-when-typing=yes
