foot: Iosevka NFM

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,4 +1,4 @@
-font=Iosevka:size=11:style=Medium,Hack:size=11,monospace:size=11
+font=Iosevka NFM:size=11:style=Medium,Hack:size=11,monospace:size=11
 pad=16x16
 term=xterm-256color
 
