--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,9 @@ set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-space
+set-option -g mouse on
+bind-key C-space send-prefix
 
 #status
 set -g status-position top
@@ -27,3 +28,13 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+bind -n M-up select-pane -U
+bind -n M-down select-pane -D
+bind -n M-left select-pane -L
+bind -n M-right select-pane -R
+
+bind -n M-S-up resize-pane -U 1
+bind -n M-S-down resize-pane -D 1
+bind -n M-S-left resize-pane -L 1
+bind -n M-S-right resize-pane -R 1
