--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-
+set-option -sg escape-time 10
+set-option -g focus-events on
 unbind C-b
 set-option -g prefix C-space
 set-option -g mouse on
