--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,15 +25,20 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 # vim-like pane switching
 bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
 
 bind -n M-up select-pane -U
 bind -n M-down select-pane -D
 bind -n M-left select-pane -L
 bind -n M-right select-pane -R
+
+bind -n M-K resize-pane -U 1
+bind -n M-J resize-pane -D 1
+bind -n M-H resize-pane -L 1
+bind -n M-L resize-pane -R 1
 
 bind -n M-S-up resize-pane -U 1
 bind -n M-S-down resize-pane -D 1
