tmux: no status/status in border

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,12 +4,15 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 unbind C-b
 set-option -g prefix C-space
-set-option -g mouse on
 bind-key C-space send-prefix
 
+set-option -g mouse on
+
 #status
-set -g status-position top
-set -g status-style 'bg=#44475a fg=#f8f8f2'
+set -g status off
+set -g status-position bottom
+bind -r b set -g status off
+bind -r B set -g status on
 
 #open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
@@ -18,6 +21,9 @@ bind r source-file ~/.tmux.conf \; display-message "Reloading config"
 #basic
 set -g base-index 1
 set -g pane-base-index 1
+set -g pane-active-border fg=magenta
+set -ag pane-active-border bg=black
+set -g pane-border-status bottom
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
