--- a/.config/i3/config
+++ b/.config/i3/config
@@ -115,11 +115,11 @@ bindsym $mod+5 workspace $ws5
 bindsym $mod+6 workspace $ws6
 bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
-bindsym Mod1+Ctrl+Left workspace prev
-bindsym Mod1+Ctrl+Right workspace next
+bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+bracketleft workspace prev
 bindsym $mod+bracketright workspace next
-
+bindsym $mod+Comma workspace prev_on_output
+bindsym $mod+Dot workspace next_on_output
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
