foot: some tweaks

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,4 +1,4 @@
-font=Iosevka NFM:size=11:style=Medium,Hack:size=11,monospace:size=11
+font=Iosevka NFM:size=13:style=Medium,Hack:size=13,monospace:size=13
 pad=16x16
 term=xterm-256color
 
@@ -27,3 +27,13 @@ bright7=f8f8f2
 
 [mouse]
 hide-when-typing=yes
+
+[csd]
+preferred=server
+size=32
+color=ff282a2c
+button-width=32
+button-minimize-color=ff44475a
+button-maximize-color=ff44475a
+button-close-color=ff44475a
+
