--- a/.config/sway/config
+++ b/.config/sway/config
@@ -53,7 +53,7 @@ set {
     # Note: it's recommended that you pass the final command to sway
     #set $menu dmenu_path | bemenu | xargs swaymsg exec --
     # $menu wofi --show=drun | xargs swaymsg exec --
-    $menu rofi -show drun -modi "drun#run#ssh#filebrowser#keys" -terminal $term
+    $menu rofi -i -m XWAYLAND0 -show drun -modi "drun#run#ssh#filebrowser#keys" -terminal $term
 }
 ### Output configuration
 # is in $HOSTNAME.conf
