some font and ui changes

--- a/.config/i3/xsettings.conf
+++ b/.config/i3/xsettings.conf
@@ -1,9 +1,10 @@
+Gtk/CursorThemeName "DMZ-Black"
+Gtk/FontName "DejaVu Sans Semi-Condensed 13"
+Gtk/MonospaceFontName "Iosevka Nerd Font Mono 12"
+Net/IconThemeName "Faba"
+Net/ThemeName "Dracula"
 Xft/Antialias 1
 Xft/HintStyle "hintmedium"
 Xft/Hinting 1
 Xft/RGBA "none"
 Xft/lcdfilter "none"
-Net/IconThemeName "Faba"
-Net/ThemeName "Dracula"
-Gtk/FontName "Liberation Sans Narrow 13"
-Gtk/CursorThemeName "DMZ-Black"
