--- a/.config/i3/xsettings.conf
+++ b/.config/i3/xsettings.conf
@@ -1,7 +1,7 @@
 Gtk/CursorThemeName "DMZ-Black"
 Gtk/FontName "DejaVu Sans Semi-Condensed 13"
 Gtk/MonospaceFontName "Iosevka Nerd Font Mono 12"
-Net/IconThemeName "Faba"
+Net/IconThemeName "Dracula"
 Net/ThemeName "Dracula"
 Xft/Antialias 1
 Xft/HintStyle "hintmedium"
