--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,8 @@ bind -n M-S-right resize-pane -R 1
 
 #status
 set -g status off
+
+# window titles
+set-option -g set-titles on
+set-option -g set-titles-string "#S / #W"
+
