tmux: mouse, scripts tabify

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,23 +6,33 @@ unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
-set-option -g mouse on
-
-
-#open new windows in the current path
+# open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
 #reload conf
 bind r source-file ~/.tmux.conf \; display-message "Reloading config"
-#basic
+# basic
 set -g base-index 1
 set -g pane-base-index 1
 set -g pane-active-border fg=magenta
 set -ag pane-active-border bg=black
 
-set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# mouse, copy and clip
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
 
+# To copy, left click and drag to highlight text in yellow, 
+# once you release left click yellow text will disappear and will automatically be available in clibboard
+# # Use vim keybindings in copy mode
+setw -g mode-keys vi
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 # vim-like pane switching
 bind -r ^ last-window
 bind -n M-k select-pane -U
@@ -44,6 +54,10 @@ bind -n M-S-up resize-pane -U 1
 bind -n M-S-down resize-pane -D 1
 bind -n M-S-left resize-pane -L 1
 bind -n M-S-right resize-pane -R 1
+
+# More friendly split pane
+bind-key h split-window -h
+bind-key v split-window -v
 
 #status
 set -g status off
