tmux: mouse select issues

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ setw -g mode-keys vi
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
-# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 # vim-like pane switching
 bind -r ^ last-window
 bind -n M-k select-pane -U
@@ -65,4 +65,3 @@ set -g status off
 # window titles
 set-option -g set-titles on
 set-option -g set-titles-string "#S / #W"
-
