--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,10 @@ unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
+# enable undercurls
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
+
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
 #reload conf
