tmux: no osc52 yank in 3.3a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set -g default-terminal "st-256color"
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+set-option -ag terminal-overrides ",xterm-256color:Ms=\\E]52;c;%p2%s\\7"
 set-option -sg escape-time 10
 set-option -g focus-events on
 unbind C-b
@@ -7,8 +8,8 @@ set-option -g prefix C-space
 bind-key C-space send-prefix
 
 # enable undercurls
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colors - needs tmux-3.0
 
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
@@ -27,6 +28,7 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
 bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
 bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
+set-window-option -g allow-passthrough on
 
 # To copy, left click and drag to highlight text in yellow, 
 # once you release left click yellow text will disappear and will automatically be available in clibboard
