--- a/.config/sway/config
+++ b/.config/sway/config
@@ -34,21 +34,17 @@ set $right l
 # Preferred applications
 set {
     # terminal
-    #$term xfce4-terminal
     $term footclient
 
     #web browser
-    #$browser env MOZ_ENABLE_WAYLAND= firefox --new-window
-    #$browser qutebrowser
     $browser firefox-wayland
     #MOZ_ENABLE_WAYLAND=1 firefox --new-window
 
     # application launchers
     # Note: it's recommended that you pass the final command to sway
     #set $menu dmenu_path | bemenu | xargs swaymsg exec --
-    # $menu wofi --show=drun | xargs swaymsg exec --
-    $menu rofi -i -m XWAYLAND0 -show drun -modi "drun#run#ssh#filebrowser#window#keys" -terminal $term
-    $alttab rofi -i -m XWAYLAND0 -show window 
+    $menu wofi --show=drun | xargs swaymsg exec --
+    $alttab ~/.config/sway/alttab.sh
 }
 ### Output configuration
 # is in $HOSTNAME.conf
@@ -70,14 +66,12 @@ include ~/.config/$HOSTNAME.conf
 output * bg ~/Pictures/Backdrops/dracula/debian.png fill
 
 ### Idle configuration
-#
-# Example configuration:
-#
+set $swaylock ~/.config/sway/swaylock-fancy.sh
 exec swayidle -w \
-    timeout 300 'swaylock -f -c 000000' \
+    timeout 300 $swaylock \
     timeout 600 'swaymsg "output * dpms off"' \
     resume 'swaymsg "output * dpms on"' \
-    before-sleep 'swaylock -f -c 000000'
+    before-sleep $swaylock
 
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
@@ -295,19 +289,6 @@ bindsym $mod+r mode "resize"
 
 bindsym $mod+Escape exec ~/.local/bin/dmenu-sys.sh
 
-#
-# Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
-bar {
-    swaybar_command waybar
-}
-
-input * {
-    xkb_layout us
-    xkb_variant altgr-intl
-}
-
 ### i3-gaps stuff ###
 
 default_border pixel 3
@@ -365,13 +346,53 @@ mode "$mode_gaps_outer" {
 }
 
 # Dracula colors
+set $active 	#bd93f9
+set $background #44475A
+set $foreground #F8F8F2
+set $urgent 	#FF5555
+set $status 	#F1FA8C
+set $transparent #ffffff00
+set $halftrans   #00000011
 
-# class                 border  bground text    indicator child_border
-client.focused          #6272A4 #6272A4 #F8F8F2 #FF72A4   #A272A4
-client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
-client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
-client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
-client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
+# class                 border      bground     text        indicator   child_border
+client.focused          $active     $active     $background $background $active
+client.focused_inactive $background $background $foreground $background $background
+client.unfocused        $background $background $foreground $background $background
+client.urgent           $urgent     $urgent     $background $urgent     $urgent
+client.placeholder      $background $background $foreground $background $background
+client.background       $background
+
+#
+# Status Bar:
+#
+# Read `man 5 sway-bar` for more information about this section.
+bar {
+    status_command i3status --config ~/.config/i3/i3status.conf
+    mode hide
+    hidden_state hide
+    modifier $mod
+    position bottom
+    output $primary
+    tray_output $primary
+    font pango:Iosevka NFM 14
+    strip_workspace_name yes
+    colors {
+    	background $transparent 
+	statusline $foreground
+	separator $foreground
+        # threesomes      	border....	background	text....
+	focused_workspace	$active		$active		$background
+	active_workspace 	$background	$background	$foreground
+	inactive_workspace 	$halftrans	$halftrans	$foreground
+	urgent_workspace 	$urgent		$urgent		$foreground
+	binding_mode		$transparent	$transparent	$urgent	
+    }
+}
+
+input * {
+    xkb_layout us
+    xkb_variant altgr-intl
+}
 
 include /etc/sway/config.d/*
 
