update-hsetroot.sh: support sway (wip)

--- a/.config/bspwm/sxhkd.conf
+++ b/.config/bspwm/sxhkd.conf
@@ -35,7 +35,7 @@ super + alt {f,n,t,c,g,h}
 
 # refresh backdrop
 super + shift + V
-	update-hsetroot.sh
+	update-hsetroot.sh -s
 
 # Hotkey cheat sheet
 super + F1
