--- a/.config/2bwm/sxhkd.conf
+++ b/.config/2bwm/sxhkd.conf
@@ -35,7 +35,7 @@ super + alt {f,n,t,c,g,h}
 
 # refresh backdrop
 ctrl + alt + V
-	update-hsetroot.sh
+	update-hsetroot.sh -s
 
 # Hotkey cheat sheet
 super + F1
