--- a/.config/i3/config
+++ b/.config/i3/config
@@ -165,7 +165,7 @@ client.background       $background
 bindsym $mod+Escape exec ~/.local/bin/dmenu-sys.sh
 bindsym $mod+d exec --no-startup-id ~/.local/bin/dmenu-run.sh
 bindsym $mod+Shift+n exec $filemgr
-bindsym $mod+Shift+v exec --no-startup-id ~/.local/bin/update-hsetroot.sh 
+bindsym $mod+Shift+v exec --no-startup-id ~/.local/bin/update-hsetroot.sh -s
 bindsym $mod+Shift+t exec --no-startup-id ~/.local/bin/dmenu-hamster.sh ask
 bindsym $mod+Shift+m exec --no-startup-id ~/.local/bin/dmenu-mpd.sh -a
 bindsym $mod+Return exec $term
