sway: more love

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -50,19 +50,7 @@ set {
 }
 ### Output configuration
 # is in $HOSTNAME.conf
-#!/bin/sh PC specific config for sway
-
-set {
-    $primary DP-1
-    $secondary HDMI-A-1
-}
-
-output $primary pos 2560 0
-output $secondary pos 0 0
-output DP-2 disable
-output DP-3 disable
-
-include ~/.config/$HOSTNAME.conf
+include ~/.config/sway/local.conf
 
 ### Idle configuration
 set $swaylock ~/.config/sway/swaylock-fancy.sh
