--- a/.config/sway/rocky.conf
+++ b/.config/sway/rocky.conf
@@ -1,10 +1,8 @@
-#!/bin/sh PC specific config for sway
-set {
-    $primary DP-1
-    $secondary HDMI-A-1
-}
+# vim: filetype=swayconfig
+set $primary DP-1
+set $secondary HDMI-A-1
 
-output $primary pos 0 0
-output $secondary pos 2560 0
+output $primary pos 2560 0
+output $secondary pos 0 0
 output DP-2 disable
 output DP-3 disable
